procutos terminados, cotizador en proceso

--- a/cotizador__airovac/views/product_inherit.xml
+++ b/cotizador__airovac/views/product_inherit.xml
@@ -1,22 +1,33 @@
-'<!--'
+
 <odoo>
-    <record id="product_template_from_inherit" model="ir.ui.view">
+     <data>
+      <record id="product_template_from_inherit" model="ir.ui.view">
             <field name="name">product.template.from.inherith</field>
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_only_form_view" />
             <field name="arch" type="xml">
-                <field name="barcode" position="after">
-                    <field name="etiqueta_a"  />
-                    <field name="etiqueta_b"  />
-                    <field name="te_max" style="50%" />
-                    <field name="te_min" style="50%" />
-                </field>
-
-                <field name="standard_price" position="after">
-                    <field name="igi"  />
-                    <field name="importation"  />
-                </field>
-
+                <xpath expr="//field[@name='categ_id']" position="after">
+                    <field name="e_product_class"/>
+                </xpath>
+      <xpath expr="//form[@name='Product Template']/sheet[1]/notebook[1]/page[@name='general_information']/group[1]" position="after">
+        <group name="studio_group_q4Nwo">
+          <group name="studio_group_q4Nwo_left">
+            <field name="e_te_max"/>
+            <field name="e_te_min"/>
+            <field name="e_etiqueta_a"/>
+            <field name="e_etiqueta_b"/>
+          </group>
+          <group name="studio_group_q4Nwo_right">
+            <field name="e_precio_de_lista"/>
+            <field name="e_importation"/>
+            <field name="e_igi"/>
+            <field name="e_mult_min"/>
+          </group>
+        </group>
+      </xpath>
             </field>
-        </record>
+         </record>
+   </data>
 </odoo>
+
+
