--- a/cotizador__airovac/views/step_multiplier.xml
+++ b/cotizador__airovac/views/step_multiplier.xml
@@ -14,9 +14,9 @@
 
                                 <notebook>
                                     <page string="Multiplicadores">
-                                        <field name="step_multiplier_line_ids">
+                                        <field name="e_step_multiplier_line_ids">
                                              <tree editable="bottom">
-                                                <field name="marca"/>
+                                                <field name="e_marca"/>
                                                 <field name="e_multiplicador"/>
                                             </tree>
                                         </field>
@@ -58,7 +58,7 @@
                 <form string="Course Form">
                             <sheet>
                                 <group>
-                                    <field name="marca"/>
+                                    <field name="e_marca"/>
                                     <field name="e_multiplicador"/>
                                 </group>
                             </sheet>
@@ -71,7 +71,7 @@
             <field name="model">step.multiplier.line</field>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="marca"/>
+                    <field name="e_marca"/>
                     <field name="e_multiplicador"/>
                 </tree>
             </field>
