--- a/cotizador__airovac/views/step_multiplier.xml
+++ b/cotizador__airovac/views/step_multiplier.xml
@@ -87,6 +87,47 @@
             </field>
         </record>
 
+
+        <record model="ir.ui.view" id="producte_class_form_view">
+            <field name="name">producte.class.form</field>
+            <field name="model">producte.class</field>
+            <field name="arch" type="xml">
+                <form string="Marca  ">
+
+                            <sheet>
+                                <group>
+                                    <field name="name"/>
+                                    <field name="e_mult_min"/>
+                                </group>
+
+<!--                                <notebook>-->
+<!--                                    <page string="Multiplicadores">-->
+<!--                                        <field name="e_step_multiplier_line_ids">-->
+<!--                                             <tree editable="bottom">-->
+<!--                                                <field name="e_marca"/>-->
+<!--                                                <field name="e_multiplicador"/>-->
+<!--                                            </tree>-->
+<!--                                        </field>-->
+<!--                                    </page>-->
+<!--                                </notebook>-->
+                            </sheet>
+
+                </form>
+            </field>
+        </record>
+
+         <record model="ir.ui.view" id="producte_class_tree_view">
+            <field name="name">producte.class.tree</field>
+            <field name="model">producte.class</field>
+            <field name="arch" type="xml">
+                <tree string="Marcas / Multiplicadores mínimos">
+                    <field name="name"/>
+                    <field name="e_mult_min"/>
+                </tree>
+            </field>
+        </record>
+
+
     </data>
 
 </odoo>
