--- a/cotizador__airovac/views/sale_view_order_form_inherith.xml
+++ b/cotizador__airovac/views/sale_view_order_form_inherith.xml
@@ -64,7 +64,7 @@
                   <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_uom_qty']" position="after">
                     <field name="e_descuento"/>
                     <field name="e_multiplicador"/>
-                    <field name="e_precio_de_lista"/>
+                    <field name="e_precio_de_lista" readonly="1" force_save="1" />
                   </xpath>
 
                   <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='tax_id']" position="attributes">
@@ -72,21 +72,21 @@
                   </xpath>
 
                     <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_subtotal']" position="replace">
-                        <field name="price_subtotal"   attrs="{'column_invisible': [('parent.breakdown', '=', False)]}" options='{"bg_color": "LightCyan:colored == 1 and principal == 1 ;  LightYellow:colored == 2 and principal == 1 "}'  />
+                        <field name="price_subtotal" readonly="1" force_save="1"   attrs="{'column_invisible': [('parent.breakdown', '=', False)]}" options='{"bg_color": "LightCyan:colored == 1 and principal == 1 ;  LightYellow:colored == 2 and principal == 1 "}'  />
                     </xpath>
 
                   <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_subtotal']" position="after">
-                      <field name="e_subtotal_no_des" attrs="{'column_invisible': [('parent.breakdown', '=', True)]}" options='{"bg_color": "LightCyan:colored == 1 and principal == 1 ;  LightYellow:colored == 2 and principal == 1 "}' />
+                      <field name="e_subtotal_no_des" readonly="1" force_save="1"  attrs="{'column_invisible': [('parent.breakdown', '=', True)]}" options='{"bg_color": "LightCyan:colored == 1 and principal == 1 ;  LightYellow:colored == 2 and principal == 1 "}' />
                       <field name="e_t_e"/>
-                       <field name="e_estimado_pro_l"/>
+                       <field name="e_estimado_pro_l" readonly="1" force_save="1" />
                        <field name="e_provedor" domain = "[('product_tmpl_id', '=', product_id )]" optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager" />
                         <field name="e_mult_std" optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
                         <field name="e_igi"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
                         <field name="e_g_m_l"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
                         <field name="e_importation"   optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager" />
-                         <field name="e_costo_unitario"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager" />
-                    <field name="e_costo_total"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
-                    <field name="e_costo_total_imp"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
+                         <field name="e_costo_unitario" readonly="1" force_save="1"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager" />
+                    <field name="e_costo_total" readonly="1" force_save="1"   optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
+                    <field name="e_costo_total_imp" readonly="1" force_save="1"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
                   </xpath>
 
                 <!--<xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_unit']" position="after">
@@ -111,7 +111,7 @@
                   </xpath>
 
                     <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_unit']" position="replace">
-                    <field name="price_unit"   options='{"bg_color": "Pink:e_por_debajo == 1 "}' />
+                    <field name="price_unit" readonly="1" force_save="1"    options='{"bg_color": "Pink:e_por_debajo == 1 "}' />
                    </xpath>
 
 
