--- a/cotizador__airovac/views/sale_view_order_form_inherith.xml
+++ b/cotizador__airovac/views/sale_view_order_form_inherith.xml
@@ -14,7 +14,7 @@
 
                             <hr style="whidth=100%;"/>
                             <field name="cambio_etapa_chebox" />
-                            <field name="step_multiplier_id" attrs="{'readonly':[('cambio_etapa_chebox','=',False)]}" />
+                            <field name="step_multiplier_id" attrs="{'readonly':[('cambio_etapa_chebox','=',False)]}" options="{'no_create_edit':True, 'no_create':True, 'no_open':True}" />
                             <field name="cambio_etapa" attrs="{'invisible': True}"  />
                             <field name="contador" attrs="{'invisible': True}" />
 
@@ -52,25 +52,30 @@
                     <create name="add_section_control" string="otra seccion" context="{'default_display_type': 'line_section_procuct'}"/>
                   </xpath>-->
 
-                <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_id']" position="after">
+                <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_template_id']" position="after">
                     <field name="e_etiqueta_line_a" optional="hide"/>
                     <field name="e_etiqueta_line_b" optional="hide"/>
-                    <field name="e_te_line_max" optional="hide"/>
                     <field name="e_te_line_min" optional="hide"/>
+                    <field name="e_te_line_max" optional="hide"/>
+                    <field name="e_t_e"/>
                   </xpath>
                   <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='name']" position="attributes">
                     <attribute name="optional">hide</attribute>
                   </xpath>
+
+
+
+
                   <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_uom_qty']" position="after">
-                      <field name="e_descuento"/>
+                      <field name="discount"/>
                       <field name="e_multiplicador"/>
                       <field name="e_mult_min" groups="sales_team.group_sale_manager" optional="hide"/>
                       <field name="e_precio_de_lista" readonly="1" force_save="1" />
                   </xpath>
 
-                  <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='tax_id']" position="attributes">
-                    <attribute name="optional">hide</attribute>
-                  </xpath>
+<!--                  <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='tax_id']" position="attributes">-->
+<!--                    <attribute name="optional"></attribute>-->
+<!--                  </xpath>-->
 
                     <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_subtotal']" position="replace">
                         <field name="price_subtotal" readonly="1" force_save="1"   attrs="{'column_invisible': [('parent.breakdown', '=', False)]}" options='{"bg_color": "LightCyan:colored == 1 and principal == 1 ;  LightYellow:colored == 2 and principal == 1 "}'  />
@@ -78,7 +83,7 @@
 
                   <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_subtotal']" position="after">
                       <field name="e_subtotal_no_des" readonly="1" force_save="1"  attrs="{'column_invisible': [('parent.breakdown', '=', True)]}" options='{"bg_color": "LightCyan:colored == 1 and principal == 1 ;  LightYellow:colored == 2 and principal == 1 "}' />
-                      <field name="e_t_e"/>
+
                        <field name="e_estimado_pro_l" readonly="1" force_save="1" />
                        <field name="e_provedor" domain = "[('product_tmpl_id', '=', product_id )]" optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager" />
                         <field name="e_mult_std" optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
@@ -89,7 +94,13 @@
                         <field name="e_g_m_l" readonly="1" force_save="1"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
                     <field name="e_costo_total" readonly="1" force_save="1"   optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
                     <field name="e_costo_total_imp" readonly="1" force_save="1"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
+<!--                      <field name="discount" readonly="1" force_save="1"  optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>-->
                   </xpath>
+
+                <xpath expr="//field[@name='e_subtotal_no_des']" position="after">
+                    <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='tax_id']" position="move"/>
+                </xpath>
+
 
                 <!--<xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_unit']" position="after">
 
@@ -121,6 +132,16 @@
                     <field name="e_p_unit_a" attrs="{'column_invisible': [('parent.breakdown', '=', True)]}"  options='{"bg_color": "LightCyan:colored == 1 and principal == 1 ;  LightYellow:colored == 2 and principal == 1 "}' />
                    </xpath>
 
+                     <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='discount'][2]" position="replace"/>
+                  <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='discount']" position="attributes">
+                    <attribute name="groups">product.group_discount_per_so_line</attribute>
+                    <attribute name="optional">show</attribute>
+                    <attribute name="string">Disc.%</attribute>
+                  </xpath>
+
+
+
+
                  <xpath expr="//group[@name='note_group']" position="before">
                      <group name="note_group" col="6" groups="sales_team.group_sale_manager">
                                 <group colspan="4">
@@ -134,6 +155,9 @@
                                 <div class="oe_clear"/>
                      </group>
                   </xpath>
+
+
+
             </field>
         </record>
 
