--- a/cotizador__airovac/views/sale_view_order_form_inherith.xml
+++ b/cotizador__airovac/views/sale_view_order_form_inherith.xml
@@ -63,17 +63,9 @@
                 </xpath>
 
 
-                 <!-- <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/control[1]/create[@name='add_note_control']" position="before">
-                    <create name="add_section_control" string="otra seccion" context="{'default_display_type': 'line_section_procuct'}"/>
-                  </xpath>-->
+<!--                <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='e_estimado_pro_l']" position="after">-->
 
-                <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_template_id']" position="after">
-                    <field name="e_etiqueta_line_a" optional="hide"/>
-                    <field name="e_etiqueta_line_b" optional="hide"/>
-                    <field name="e_te_line_min" optional="hide"/>
-                    <field name="e_te_line_max" optional="hide"/>
-                    <field name="e_t_e"/>
-                  </xpath>
+<!--                  </xpath>-->
                   <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='name']" position="attributes">
                     <attribute name="optional">hide</attribute>
                   </xpath>
@@ -100,6 +92,14 @@
                       <field name="e_subtotal_no_des" readonly="1" force_save="1"  attrs="{'column_invisible': [('parent.breakdown', '=', True)]}" options='{"bg_color": "LightCyan:colored == 1 and principal == 1 ;  LightYellow:colored == 2 and principal == 1 "}' />
 
                        <field name="e_estimado_pro_l" readonly="1" force_save="1" />
+                       <field name="e_etiqueta_line_a" optional="hide"/>
+                       <field name="e_etiqueta_line_b" optional="hide"/>
+                       <field name="e_t_e"/>
+                       <field name="e_te_line_min" optional="hide"/>
+                       <field name="e_te_line_max" optional="hide"/>
+
+
+
                        <field name="e_provedor" domain = "[('product_tmpl_id', '=', product_id )]" optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager" />
                         <field name="e_mult_std" optional="hide" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
                         <field name="e_exwork" optional="hide" readonly="1" force_save="1" attrs="{'column_invisible': [('parent.hide_fields', '=', False)]}" groups="sales_team.group_sale_manager"/>
